<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <!--item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home"/-->
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_auctions"
            android:icon="@drawable/ic_all_inclusive_black_24dp"
            android:title="@string/auctions"/>
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_style_black_24dp"
            android:title="@string/category" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_email_black_24dp"
            android:title="@string/messages" />
    </group>

    <group android:id="@+id/memberGroup"
        android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_new_auction"
                    android:icon="@drawable/ic_add_box_black_24dp"
                    android:title="@string/newAuction" />
                <item
                    android:id="@+id/nav_my_auction"
                    android:icon="@drawable/ic_gavel_black_24dp"
                    android:title="@string/myAuction" />
                <item
                    android:id="@+id/nav_participate_auction"
                    android:icon="@drawable/ic_poll_black_24dp"
                    android:title="@string/participateAuction" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_exit_to_app_black_24dp"
                    android:title="@string/logout" />
    </group>

</menu>
