<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Activities.SignUp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_centerInParent="true"
            android:scrollbars="vertical"
            android:isScrollContainer="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtFillData"
                android:gravity="center"
                android:layout_marginTop="16px"
                android:text="@string/signUpInfo"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/edtUsername"
                android:hint="@string/user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/hintText"
                android:textColor="@android:color/white"
                android:inputType="text"
                android:textSize="18sp"
                app:met_baseColor="@android:color/white"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@android:color/white"
                app:met_singleLineEllipsis="true"
                />

            <EditText
                android:id="@+id/edtPassword"
                android:hint="@string/pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/hintText"
                android:textColor="@android:color/white"
                android:inputType="textPassword"
                android:textSize="18sp"
                app:met_baseColor="@android:color/white"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@android:color/white"
                app:met_singleLineEllipsis="true"
                />

            <EditText
                android:id="@+id/edtcPassword"
                android:hint="@string/cPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/hintText"
                android:textColor="@android:color/white"
                android:inputType="textPassword"
                android:textSize="18sp"
                app:met_baseColor="@android:color/white"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@android:color/white"
                app:met_singleLineEllipsis="true"
                />

            <EditText
                android:id="@+id/edtFirstName"
                android:hint="@string/fName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/hintText"
                android:textColor="@android:color/white"
                android:inputType="text"
                android:textSize="18sp"
                app:met_baseColor="@android:color/white"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@android:color/white"
                app:met_singleLineEllipsis="true"
                />

            <EditText
                android:id="@+id/edtLastName"
                android:hint="@string/lName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/hintText"
                android:textColor="@android:color/white"
                android:inputType="text"
                android:textSize="18sp"
                app:met_baseColor="@android:color/white"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@android:color/white"
                app:met_singleLineEllipsis="true"
                />

            <EditText
                android:id="@+id/edtEmail"
                android:hint="@string/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/hintText"
                android:textColor="@android:color/white"
                android:inputType="textEmailAddress"
                android:textSize="18sp"
                app:met_baseColor="@android:color/white"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@android:color/white"
                app:met_singleLineEllipsis="true"
                />

            <EditText
                android:id="@+id/edtPhone"
                android:hint="@string/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/hintText"
                android:textColor="@android:color/white"
                android:inputType="phone"
                android:textSize="18sp"
                app:met_baseColor="@android:color/white"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@android:color/white"
                app:met_singleLineEllipsis="true"
                />

            <EditText
                android:id="@+id/edtCountry"
                android:hint="@string/country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/hintText"
                android:textColor="@android:color/white"
                android:inputType="text"
                android:textSize="18sp"
                app:met_baseColor="@android:color/white"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@android:color/white"
                app:met_singleLineEllipsis="true"
                />

            <EditText
                android:id="@+id/edtCity"
                android:hint="@string/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/hintText"
                android:textColor="@android:color/white"
                android:inputType="text"
                android:textSize="18sp"
                app:met_baseColor="@android:color/white"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@android:color/white"
                app:met_singleLineEllipsis="true"
                />

            <EditText
                android:id="@+id/edtAddress"
                android:hint="@string/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/hintText"
                android:textColor="@android:color/white"
                android:inputType="text"
                android:textSize="18sp"
                app:met_baseColor="@android:color/white"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@android:color/white"
                app:met_singleLineEllipsis="true"
                />

            <EditText
                android:id="@+id/edtTax"
                android:hint="@string/tax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/hintText"
                android:textColor="@android:color/white"
                android:inputType="number"
                android:textSize="18sp"
                app:met_baseColor="@android:color/white"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@android:color/white"
                app:met_singleLineEllipsis="true"
                />

            <Button
                android:id="@+id/btnSignUp"
                android:text="@string/signUp"
                android:textColor="@android:color/white"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/btnSignUp"
                android:shadowColor="@android:color/black"
                android:ellipsize="end"
                />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>