<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/initialImage"
            android:layout_width="400dp"
            android:layout_height="400dp"
            android:src="@drawable/eauction"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/txtSlogan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/slogan"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:padding="25dp"/>

    </LinearLayout>
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:weightSum="3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <!--info.hoang8f.widget.FButton
            android:id="@+id/btnSignUp"
            android:text="@string/signUp"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:buttonColor="@color/btnSignUp"
            app:shadowColor="@android:color/black"
            app:shadowEnabled="true"
            app:shadowHeight="5dp"
            app:cornerRadius="4dp"
            />

        <info.hoang8f.widget.FButton
            android:id="@+id/btnSignIn"
            android:text="@string/signIn"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:buttonColor="@color/btnSignIn"
            app:shadowColor="@android:color/black"
            app:shadowEnabled="true"
            app:shadowHeight="5dp"
            app:cornerRadius="4dp"
            />

        <info.hoang8f.widget.FButton
            android:id="@+id/btnGuest"
            android:text="@string/guest"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:buttonColor="@color/btnGuest"
            app:shadowColor="@android:color/black"
            app:shadowEnabled="true"
            app:shadowHeight="5dp"
            app:cornerRadius="4dp"
            /-->

        <Button
            android:id="@+id/btnSignUp"
            android:text="@string/signUp"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/btnSignUp"
            android:shadowColor="@android:color/black"
            android:ellipsize="end"/>

        <Button
            android:id="@+id/btnSignIn"
            android:text="@string/signIn"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/btnSignIn"
            android:shadowColor="@android:color/black"
            android:ellipsize="end"/>

        <Button
            android:id="@+id/btnGuest"
            android:text="@string/guest"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/btnGuest"
            android:shadowColor="@android:color/black"
            android:ellipsize="end"/>

    </LinearLayout>

</RelativeLayout>